conditionals on the templates for logged in users/owners

--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -9,7 +9,13 @@
   <body>
     <h1>ALL THE POSTS!</h1>
 
+    <% if(!currentUser) { %>
+    <a href="/register">Register</a>
+    <a href="/login">Login</a>
+    <% } else { %>
     <a href="/logout">logout</a>
+    <% }%>
+
     <a href="/posts/new">New post</a>
     <% for( let post of posts ) { %>
     <p><%= post %></p>
