--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,25 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index</title>
-  </head>
-  <body>
-    <h1>ALL THE POSTS!</h1>
+<% layout('layouts/boilerplate') %>
+<h1>ALL THE POSTS!</h1>
 
-    <% if(!currentUser) { %>
-    <a href="/register">Register</a>
-    <a href="/login">Login</a>
-    <% } else { %>
-    <a href="/logout">logout</a>
-    <% }%>
+<% if(!currentUser) { %>
+<a href="/register">Register</a>
+<a href="/login">Login</a>
+<% } else { %>
+<a href="/logout">logout</a>
+<% }%>
 
-    <a href="/posts/new">New post</a>
-    <% for( let post of posts ) { %>
-    <p><%= post %></p>
-    <a href="/posts/<%=post._id%>">view</a>
-    <% } %>
-  </body>
-</html>
+<a href="/posts/new">New post</a>
+<% for( let post of posts ) { %>
+<p><%= post %></p>
+<a href="/posts/<%=post._id%>">view</a>
+<% } %>
