--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -1,50 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Show page!</title>
-  </head>
-  <body>
-    <a href="/posts">Back to all posts</a>
-    <div>
-      <h3><%= post.title %></h3>
-      <img src="<%=post.image%>" alt="" />
-      <p><%= post.description %></p>
-    </div>
+<% layout('layouts/boilerplate') %>
 
-    <% if(currentUser && post.author.equals(currentUser._id)) { %>
-    <a href="/posts/<%= post._id %>/edit">edit this</a>
-    <form action="/posts/<%= post._id %>?_method=DELETE" method="POST">
-      <button>Delete</button>
-    </form>
+<a href="/posts">Back to all posts</a>
+<div>
+  <h3><%= post.title %></h3>
+  <img src="<%=post.image%>" alt="" />
+  <p><%= post.description %></p>
+</div>
 
-    <% } %> <% if(currentUser) { %>
-    <form action="/posts/<%= post._id %>/comments" method="POST">
-      <div>
-        <label for="comment">Comment: </label>
-        <textarea name="comment[body]" id="comment" cols="30" rows="2"></textarea>
-      </div>
-      <button>Submit Comment</button>
+<% if(currentUser && post.author.equals(currentUser._id)) { %>
+<a href="/posts/<%= post._id %>/edit">edit this</a>
+<form action="/posts/<%= post._id %>?_method=DELETE" method="POST">
+  <button>Delete</button>
+</form>
+
+<% } %> <% if(currentUser) { %>
+<form action="/posts/<%= post._id %>/comments" method="POST">
+  <div>
+    <label for="comment">Comment: </label>
+    <textarea name="comment[body]" id="comment" cols="30" rows="2"></textarea>
+  </div>
+  <button>Submit Comment</button>
+</form>
+<% } %>
+
+<div>
+  <% for(let comment of post.comments ) { %>
+  <div>
+    <h3><%= comment.author.username %></h3>
+    <p><%= comment.body %></p>
+    <% if(currentUser && comment.author.equals(currentUser._id)) { %>
+    <form action="/posts/<%= post._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
+      <button>Delete comment</button>
     </form>
     <% } %>
-
-    <div>
-      <% for(let comment of post.comments ) { %>
-      <div>
-        <h3><%= comment.author.username %></h3>
-        <p><%= comment.body %></p>
-        <% if(currentUser && comment.author.equals(currentUser._id)) { %>
-        <form
-          action="/posts/<%= post._id %>/comments/<%= comment._id %>?_method=DELETE"
-          method="POST"
-        >
-          <button>Delete comment</button>
-        </form>
-        <% } %>
-      </div>
-      <% } %>
-    </div>
-  </body>
-</html>
+  </div>
+  <% } %>
+</div>
