--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>DogPics</title>
   </head>
   <body>
     <%- include('../partials/navbar') %>
     <main><%- body %></main>
+
+    <script src="/js/scripts.js"></script>
   </body>
 </html>
