--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,44 +1,29 @@
 <nav
-  class="navbar has-background-light has-text-dark"
+  class="navbar has-background-light has-text-dark mb-5"
   role="navigation"
   aria-label="main navigation"
 >
   <div class="navbar-brand">
-    <!-- <a class="navbar-item" href="https://bulma.io">
-      <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28" />
-    </a> -->
-
-    <!-- <a
+    <p class="navbar-item">dogpics</p>
+    <a
       role="button"
       class="navbar-burger"
       aria-label="menu"
       aria-expanded="false"
-      data-target="navbarBasicExample"
+      data-target="mainNav"
     >
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
-    </a> -->
-    <p class="navbar-item">dogpics</p>
+    </a>
   </div>
 
-  <div id="navbarBasicExample" class="navbar-menu">
+  <div id="mainNav" class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item"> Home </a>
 
       <a class="navbar-item" href="/posts"> Posts </a>
 
-      <!-- <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link"> More </a>
-
-        <div class="navbar-dropdown">
-          <a class="navbar-item"> About </a>
-          <a class="navbar-item"> Jobs </a>
-          <a class="navbar-item"> Contact </a>
-          <hr class="navbar-divider" />
-          <a class="navbar-item"> Report an issue </a>
-        </div>
-      </div> -->
       <% if(currentUser) { %>
       <a href="/posts/new" class="navbar-item">Create new post</a>
       <% } %>
@@ -46,16 +31,19 @@
 
     <div class="navbar-end">
       <div class="navbar-item">
+        <% if(!currentUser) {%>
         <div class="buttons">
-          <% if(!currentUser) {%>
           <a href="/register" class="button is-primary">
             <strong>Sign up</strong>
           </a>
           <a href="/login" class="button is-light"> Log in </a>
-          <% } else { %>
-          <a href="/logout" class="button is-light"> Log Out </a>
-          <% } %>
         </div>
+        <% } else { %>
+        <p class="navbar-item is-hidden-mobile">Hello <%= currentUser.username %>!</p>
+        <div class="buttons">
+          <a href="/logout" class="button is-light"> Log Out </a>
+        </div>
+        <% } %>
       </div>
     </div>
   </div>
