--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,13 +1,25 @@
 <% layout('layouts/boilerplate') %>
-<form action="/login" method="POST">
-  <div>
-    <h1>Login</h1>
-    <label for="username">Username: </label>
-    <input type="text" name="username" id="username" />
+<div class="container">
+  <div class="columns is-centered">
+    <div class="column is-one-quarter">
+      <div class="box">
+        <h1 class="title">Login</h1>
+        <form action="/login" method="POST" class="form">
+          <div class="field">
+            <label for="username">Username: </label>
+            <div class="control">
+              <input class="input" type="text" name="username" id="username" />
+            </div>
+          </div>
+          <div class="field">
+            <label for="password">Password: </label>
+            <div class="control">
+              <input class="input" type="password" name="password" id="password" />
+            </div>
+          </div>
+          <button class="button is-primary is-fullwidth">Login</button>
+        </form>
+      </div>
+    </div>
   </div>
-  <div>
-    <label for="password">Password: </label>
-    <input type="password" name="password" id="password" />
-  </div>
-  <button>Login</button>
-</form>
+</div>
