--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -1,19 +1,51 @@
 <% layout('layouts/boilerplate') %>
-<h1>Creating a new Post</h1>
-<form action="/posts/<%= post._id %>?_method=PUT" method="POST">
-  <div>
-    <label for="title">Title</label>
-    <input type="text" name="post[title]" id="title" value="<%= post.title %> " />
+<div class="container">
+  <div class="columns is-centered">
+    <div class="column is-half">
+      <div class="box">
+        <h1 class="title">Editing a Post</h1>
+        <form action="/posts/<%= post._id %>?_method=PUT" method="POST">
+          <div class="field">
+            <label for="title">Title:</label>
+            <div class="control">
+              <input
+                type="text"
+                name="post[title]"
+                id="title"
+                value="<%= post.title %>"
+                class="input"
+              />
+            </div>
+          </div>
+          <div class="field">
+            <label for="image">Image URL: </label>
+            <div class="control">
+              <input
+                type="text"
+                name="post[image]"
+                id="image"
+                value="<%= post.image %>"
+                class="input"
+              />
+            </div>
+          </div>
+          <div class="field">
+            <label for="description">Description: </label>
+            <div class="control">
+              <textarea
+                name="post[description]"
+                id="description"
+                cols="30"
+                rows="3"
+                class="textarea"
+              >
+<%= post.description %></textarea
+              >
+            </div>
+          </div>
+          <button class="button is-primary is-fullwidth">Submit Edit</button>
+        </form>
+      </div>
+    </div>
   </div>
-  <div>
-    <label for="image">Image</label>
-    <input type="text" name="post[image]" id="image" value="<%= post.image %> " />
-  </div>
-  <div>
-    <label for="description">Description</label>
-    <textarea name="post[description]" id="description" cols="30" rows="10">
-<%= post.description %> </textarea
-    >
-  </div>
-  <button>Submit</button>
-</form>
+</div>
