--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>DogPics</title>
   </head>
-  <body>
+  <body class="is-flex is-flex-direction-column is-justify-content-space-between">
     <%- include('../partials/navbar') %>
     <main><%- body %></main>
-
+    <%- include('../partials/footer') %>
     <script src="/js/scripts.js"></script>
   </body>
 </html>
