--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
-<div class="container">
-  <div class="columns is-multiline mt-5">
+<div class="container my-10">
+  <div class="columns is-multiline ">
     <% for( let post of posts ) { %>
     <a href="/posts/<%=post._id%>">
       <div class="column block is-one-third">
