--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
 html {
   height: 100%;
 }
 body {
   min-height: 100vh;
+  font-family: 'Lato', sans-serif;
 }
 .comment-box {
   border: 1px solid #c1c1c1;
