--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -56,7 +56,7 @@
         <% for(let comment of post.comments ) { %>
         <div class="box is-shadowless comment-box">
           <p class="is-size-5"><%= comment.body %></p>
-          <p>- <%= comment.author.username %></p>
+          <a href="/users/<%= comment.author._id %> ">- <%= comment.author.username %></a>
           <% if(currentUser && comment.author.equals(currentUser._id)) { %>
           <form
             action="/posts/<%= post._id %>/comments/<%= comment._id %>?_method=DELETE"
