added required to some form inputs

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -8,13 +8,13 @@
           <div class="field">
             <label for="username">Username: </label>
             <div class="control">
-              <input class="input" type="text" name="username" id="username" />
+              <input class="input" type="text" name="username" id="username" required />
             </div>
           </div>
           <div class="field">
             <label for="password">Password: </label>
             <div class="control">
-              <input class="input" type="password" name="password" id="password" />
+              <input class="input" type="password" name="password" id="password" required />
             </div>
           </div>
           <button class="button is-primary is-fullwidth">Login</button>
