--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -8,13 +8,13 @@
           <div class="field">
             <label for="username">Username: </label>
             <div class="control">
-              <input type="text" name="username" id="username" class="input" />
+              <input type="text" name="username" id="username" class="input" required />
             </div>
           </div>
           <div class="field">
             <label for="password">Password: </label>
             <div class="control">
-              <input type="password" name="password" id="password" class="input" />
+              <input type="password" name="password" id="password" class="input" required />
             </div>
           </div>
           <button class="button is-primary is-fullwidth">Register</button>
