--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 <div class="container">
   <div class="columns is-centered">
-    <div class="column is-one-quarter">
+    <div class="column is-one-third">
       <div class="box">
         <h1 class="title">Login</h1>
         <form action="/login" method="POST" class="form">
