--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
 <div class="container">
   <div class="columns is-centered">
-    <div class="column is-one-quarter">
+    <div class="column is-one-third">
       <div class="box">
         <h1 class="title">Register for an account</h1>
         <form action="/register" method="POST">
