--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="columns is-centered mb-5">
     <div class="column is-half">
-      <div class="notification is-success has-background-success-light has-text-black-ter">
+      <div class="notification is-success has-background-success has-text-black-ter">
         <button class="delete"></button>
         <%= success %>
       </div>
@@ -14,7 +14,7 @@
 <div class="container">
   <div class="columns is-centered mb-5">
     <div class="column is-half">
-      <div class="notification is-danger has-background-danger-light has-text-black-ter">
+      <div class="notification is-danger has-background-danger has-text-black-ter">
         <button class="delete"></button>
         <%= error %>
       </div>
