--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -46,7 +46,7 @@
               >
             </div>
           </div>
-          <button class="button is-primary is-fullwidth">Submit Edit</button>
+          <button class="button is-primary is-fullwidth btn-form">Submit Edit</button>
         </form>
       </div>
     </div>
