--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -39,7 +39,7 @@
               This Field is required
             </p>
           </div>
-          <button class="button is-primary is-fullwidth">Post</button>
+          <button class="button is-primary is-fullwidth btn-form">Post</button>
         </form>
       </div>
     </div>
