--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -17,7 +17,7 @@
               <input class="input" type="password" name="password" id="password" required />
             </div>
           </div>
-          <button class="button is-primary is-fullwidth">Login</button>
+          <button class="button is-primary is-fullwidth btn-form">Login</button>
         </form>
       </div>
     </div>
