--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplate') %>
 <div class="container">
-  <h1 class="title is-size-3 is-align-self-flex-start is-centered">
+  <h1 class="title is-size-3 has-text-dark">
     <%= user.username %>'s Profile
   </h1>
 
