--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -17,7 +17,7 @@
               <input type="password" name="password" id="password" class="input" required />
             </div>
           </div>
-          <button class="button is-primary is-fullwidth">Register</button>
+          <button class="button is-primary is-fullwidth btn-form">Register</button>
         </form>
       </div>
     </div>
