--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer p-3 mt-5">
+<footer class="footer p-3 mt-5 main-footer">
   <div class="content has-text-centered">
     <p>dogpics &copy; 2021</p>
   </div>
