--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,10 +1,6 @@
-<nav
-  class="navbar has-background-light has-text-dark mb-5"
-  role="navigation"
-  aria-label="main navigation"
->
+<nav class="navbar mb-5 main-nav" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <p class="navbar-item">dogpics</p>
+    <a href="/" class="navbar-item has-dark">dopgpics</a>
     <a
       role="button"
       class="navbar-burger"
@@ -20,24 +16,24 @@
 
   <div id="mainNav" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" href="/posts"> Posts </a>
+      <a class="navbar-item has-text-dark" href="/posts"> Posts </a>
 
       <% if(currentUser) { %>
-      <a href="/posts/new" class="navbar-item">Create new post</a>
+      <a href="/posts/new" class="navbar-item has-text-dark">Create new post</a>
       <% } %>
     </div>
 
     <div class="navbar-end">
-      <div class="navbar-item">
+      <div class="navbar-item has-text-dark">
         <% if(!currentUser) {%>
         <div class="buttons">
-          <a href="/register" class="button is-primary">
+          <a href="/register" class="button is-primary btn-signup">
             <strong>Sign up</strong>
           </a>
           <a href="/login" class="button is-light"> Log in </a>
         </div>
         <% } else { %>
-        <p class="navbar-item is-hidden-mobile">Hello <%= currentUser.username %>!</p>
+        <p class="navbar-item is-hidden-mobile has-text-dark">Hello <%= currentUser.username %>!</p>
         <div class="buttons">
           <a href="/users/<%= currentUser._id %>" class="button is-light">View your profile</a>
           <a href="/logout" class="button is-light"> Log Out </a>
